Complete model service, and integrate gateway, indeed and model services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,9 @@ services:
         build: ./indeed-service
         volumes:
             - ./indeed-service:/usr/src/app
+    
+    model-service:
+        build: ./model-service
+        volumes:
+            - ./model-service:/usr/src/app
+
