--- a/gateway-nodejs-service/package.json
+++ b/gateway-nodejs-service/package.json
@@ -11,7 +11,7 @@
     "dependencies": {
         "express": "^4.16.1",
         "node-fetch": "2.6.0",
-        "atob": "2.1.2"
+        "cors": "2.8.5"
     },
     "devDependencies": {
         "nodemon": "^2.0.3"
