--- a/model-service/Dockerfile
+++ b/model-service/Dockerfile
@@ -1,3 +1,5 @@
 FROM python:3-onbuild
+WORKDIR /usr/src/app
 COPY . /usr/src/app
-CMD ["python", "app.py"]
+RUN pip install -r requirements.txt
+CMD ["uwsgi", "config.ini"]
