--- a/frontend-website/package.json
+++ b/frontend-website/package.json
@@ -2,6 +2,7 @@
   "name": "frontend-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://shahmeershahid.github.io/ResumeWords",
   "dependencies": {
     "@material-ui/core": "^4.9.13",
     "@testing-library/jest-dom": "^4.2.4",
@@ -17,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
