--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,30 @@ version: "3"
 
 services:
     gateway-service:
-        # build: ./gateway-service
-        build: ./gateway-nodejs-service
+        build:
+            context: ./gateway-nodejs-service
         volumes:
-            # - ./gateway-service:/usr/src/app
             - ./gateway-nodejs-service:/usr/src/app
             - /usr/src/app/node_modules
         ports:
             - 5000:8080
+        environment:
+            - PORT=8080
 
     indeed-service:
         build: ./indeed-service
         volumes:
             - ./indeed-service:/usr/src/app
+        ports:
+            - 5001:8080
+        environment:
+            - PORT=8080
 
     model-service:
         build: ./model-service
         volumes:
             - ./model-service:/usr/src/app
+        ports:
+            - 5002:8080
+        environment:
+            - PORT=8080
