--- a/gateway-nodejs-service/cloudbuild.yaml
+++ b/gateway-nodejs-service/cloudbuild.yaml
@@ -1,7 +1,7 @@
  steps:
  # build the container image
  - name: 'gcr.io/cloud-builders/docker'
-   args: ['build', '-t', 'gcr.io/$PROJECT_ID/gateway-service:$COMMIT_SHA', '/gateway-service']
+   args: ['build', '-t', 'gcr.io/$PROJECT_ID/gateway-service:$COMMIT_SHA', '/gateway-nodejs-service']
  # push the container image to Container Registry
  - name: 'gcr.io/cloud-builders/docker'
    args: ['push', 'gcr.io/$PROJECT_ID/gateway-service:$COMMIT_SHA']
