--- a/indeed-service/cloudbuild.yaml
+++ b/indeed-service/cloudbuild.yaml
@@ -1,7 +1,7 @@
  steps:
  # build the container image
  - name: 'gcr.io/cloud-builders/docker'
-   args: ['build', '-t', 'gcr.io/$PROJECT_ID/indeed-service:$COMMIT_SHA', '.']
+   args: ['build', '-t', 'gcr.io/$PROJECT_ID/indeed-service:$COMMIT_SHA', './indeed-service']
  # push the container image to Container Registry
  - name: 'gcr.io/cloud-builders/docker'
    args: ['push', 'gcr.io/$PROJECT_ID/indeed-service:$COMMIT_SHA']
