Correct cloudbuild.yaml file

--- a/gateway-nodejs-service/cloudbuild.yaml
+++ b/gateway-nodejs-service/cloudbuild.yaml
@@ -1,4 +1,6 @@
 steps:
+  - name: "gcr.io/cloud-builders/docker"
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/gateway-service:$COMMIT_SHA", "./gateway-nodejs-service"]
   # push the container image to Container Registry
   - name: "gcr.io/cloud-builders/docker"
     args: ["push", "gcr.io/$PROJECT_ID/gateway-service:$COMMIT_SHA"]
