--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,11 +21,20 @@ services:
         environment:
             - PORT=8080
 
+    linkedin-service:
+        build: ./linkedin-service
+        volumes:
+            - ./linkedin-service:/usr/src/app
+        ports:
+            - 5002:8080
+        environment:
+            - PORT=8080
+
     model-service:
         build: ./model-service
         volumes:
             - ./model-service:/usr/src/app
         ports:
-            - 5002:8080
+            - 5003:8080
         environment:
             - PORT=8080
