--- a/frontend-website/package.json
+++ b/frontend-website/package.json
@@ -4,15 +4,23 @@
   "private": true,
   "homepage": "https://shahmeershahid.github.io/ResumeWords",
   "dependencies": {
+    "@chakra-ui/react": "^1.0.1",
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11.0.0",
     "@material-ui/core": "^4.9.13",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "formik": "^2.2.5",
+    "framer-motion": "^2.9.4",
     "gh-pages": "^2.2.0",
-    "react": "^16.13.1",
+    "notistack": "^1.0.2",
+    "react": "^16.14.0",
+    "react-async": "^10.0.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "urlsafe-base64": "^1.0.0"
+    "urlsafe-base64": "^1.0.0",
+    "yup": "^0.31.0"
   },
   "scripts": {
     "start": "react-scripts start",
