--- a/frontend-website/package.json
+++ b/frontend-website/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://shahmeershahid.github.io/ResumeWords",
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.1",
     "@chakra-ui/react": "^1.0.1",
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
@@ -18,6 +19,7 @@
     "react": "^16.14.0",
     "react-async": "^10.0.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^4.1.0",
     "react-scripts": "3.4.1",
     "urlsafe-base64": "^1.0.0",
     "yup": "^0.31.0"
