fix firebase hosting

--- a/frontend-website/firebase.json
+++ b/frontend-website/firebase.json
@@ -12,5 +12,16 @@
         "destination": "/index.html"
       }
     ]
-  }
+  },
+  "headers": [
+    {
+      "source": "/service-worker.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache"
+        }
+      ]
+    }
+  ]
 }
