--- a/frontend-website/package.json
+++ b/frontend-website/package.json
@@ -2,7 +2,6 @@
   "name": "frontend-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://shahmeershahid.github.io/ResumeWords",
   "dependencies": {
     "@chakra-ui/icons": "^1.0.1",
     "@chakra-ui/react": "^1.0.1",
@@ -27,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "deploy": "firebase deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "firebase": "^8.1.2"
   }
 }
