--- a/frontend-website/public/manifest.json
+++ b/frontend-website/public/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "1200x628"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
